Set up the basics